Fixed header padding on small screens

--- a/css/landing-page.css
+++ b/css/landing-page.css
@@ -100,6 +100,7 @@ img {
   flex-direction: column;
   justify-content: center;
   min-height: 100vh;
+  padding: 150px 0;
 }
 
 .intro-header-logo {
